--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Notifications page</title>
@@ -34,7 +34,7 @@
       <div class="comment unread">
         <img
           class="avatar"
-          src="/assets/images/avatar-mark-webber.webp"
+          src="./images/avatar-mark-webber.webp"
           alt="avatar-1"
         />
         <div>
@@ -50,7 +50,7 @@
       <div class="comment unread">
         <img
           class="avatar"
-          src="/assets/images/avatar-angela-gray.webp"
+          src="./images/avatar-angela-gray.webp"
           alt="avatar-2"
         />
         <div>
@@ -65,7 +65,7 @@
       <div class="comment unread">
         <img
           class="avatar"
-          src="/assets/images/avatar-jacob-thompson.webp"
+          src="./images/avatar-jacob-thompson.webp"
           alt="avatar-3"
         />
         <div>
@@ -81,7 +81,7 @@
       <div class="comment">
         <img
           class="avatar"
-          src="/assets/images/avatar-rizky-hasanuddin.webp"
+          src="./images/avatar-rizky-hasanuddin.webp"
           alt="avatar-4"
         />
         <div>
@@ -102,8 +102,8 @@
       <div class="comment">
         <img
           class="avatar"
-          src="/assets/images/avatar-kimberly-smith.webp"
-          alt="avatar-4"
+          src="./images/avatar-kimberly-smith.webp"
+          alt="avatar-5"
         />
         <div>
           <p>
@@ -112,12 +112,12 @@
           </p>
           <p class="paragraph-time">1 week ago</p>
         </div>
-        <img id="chess" src="/assets/images/image-chess.webp" alt="chess" />
+        <img id="chess" src="./images/image-chess.webp" alt="chess" />
       </div>
       <div class="comment">
         <img
           class="avatar"
-          src="/assets/images/avatar-nathan-peterson.webp"
+          src="./images/avatar-nathan-peterson.webp"
           alt="avatar-6"
         />
         <div>
@@ -134,7 +134,7 @@
       <div class="comment">
         <img
           class="avatar"
-          src="/assets/images/avatar-anna-kim.webp"
+          src="./images/avatar-anna-kim.webp"
           alt="avatar-7"
         />
         <div>
